--- a/content/reviews/1.md
+++ b/content/reviews/1.md
@@ -3,7 +3,4 @@ id: 1
 name: 'Галина Ивановна'
 date: '2018-02-21'
 ---
-Здравствуйте, уважаемые работники сервиса! 
-Что произошло с сайтом - записаться на прием к терапевту невозможно - нет такого врача(Зато очень много рекламы!)Есть только хирург, офтальмолог и невролог. Как записаться к терапевту? В 15:40 трубку в регистратуре никто не берёт
-Очень надеюсь, что получу вразумительный ответ на эту ситуацию!
-С уважением, Галина Ивановна.
+Здравствуйте, уважаемые работники сервиса! Что произошло с сайтом - записаться на прием к терапевту невозможно - нет такого врача(Зато очень много рекламы!) Есть только хирург, офтальмолог и невролог. Как записаться к терапевту? В 15:40 трубку в регистратуре никто не берёт Очень надеюсь, что получу вразумительный ответ на эту ситуацию! С уважением, Галина Ивановна.
