--- a/content/reviews/12.md
+++ b/content/reviews/12.md
@@ -3,7 +3,6 @@ id: 12
 name: 'Наталья'
 date: '2022-09-09'
 ---
-Есть врачи по специальности, а есть врачи по призванию...
-Я искренне благодарю врача акушера-гинеколога **Андара Магане Чамара Чандраратне** прежде всего за доброе, человеческое отношение.
+Есть врачи по специальности, а есть врачи по призванию... Я искренне благодарю врача акушера-гинеколога **Андара Магане Чамара Чандраратне** прежде всего за доброе, человеческое отношение.
 После первой консультации понимаешь, что доктор - грамотный специалист, профессионал своего дела с чуткой душой и открытым сердцем, человек, переживающий за каждого своего пациента.
 ОГРОМНОЕ ВАМ СПАСИБО за помощь, которую вы оказали мне. Желаю Вам крепкого здоровья и простого человеческого счастья!
