--- a/content/reviews/3.md
+++ b/content/reviews/3.md
@@ -4,6 +4,4 @@ name: 'Виктория'
 date: '2017-05-31'
 published: true
 ---
-Хочу Выразить огромную благодарность всем педиатрам в Романовке,за их отзывчивость и помощь всегда и во всем,доброту и неравнодушие..
-Особенно хотим от имени всей нашей семьи сказать СПАСИБО за все **Власовой Юлии Сергеевне**.
-**Вы врач с большой буквы и просто хороший человек!!!**
+Хочу Выразить огромную благодарность всем педиатрам в Романовке,за их отзывчивость и помощь всегда и во всем,доброту и неравнодушие.. Особенно хотим от имени всей нашей семьи сказать СПАСИБО за все **Власовой Юлии Сергеевне**. **Вы врач с большой буквы и просто хороший человек!!!**
