--- a/content/reviews/13.md
+++ b/content/reviews/13.md
@@ -3,5 +3,4 @@ id: 13
 name: 'Алёна'
 date: '2022-10-13'
 ---
-Огромное спасибо, за хорошее и качественное медицинское обслуживание **Поднебесной Мариии Васильевне** и медицинской сестре.
-Всего Вам хорошего за Вашу доброту и внимательность.
+Огромное спасибо, за хорошее и качественное медицинское обслуживание **Поднебесной Мариии Васильевне** и медицинской сестре. Всего Вам хорошего за Вашу доброту и внимательность.
