--- a/content/reviews/2.md
+++ b/content/reviews/2.md
@@ -4,8 +4,4 @@ name: 'Галина Ивановна'
 date: '2018-01-03'
 published: true
 ---
-Здравствуйте!
-Спасибо, что опубликовали мой отзыв! 
-Но вот отметить , хорощий он или не соответствует действительности нет возможности...Не работают \"кнопки\" : спам, \"пальчик\" вверх, \"пальчик\" вниз. 
-Исправьте, пожалуйста! Очень хочется видеть реакцию на отзывы. 
-*С уважением, Галина.*
+Здравствуйте! Спасибо, что опубликовали мой отзыв! Но вот отметить , хорощий он или не соответствует действительности нет возможности...Не работают "кнопки" : спам, "пальчик" вверх, "пальчик" вниз. Исправьте, пожалуйста! Очень хочется видеть реакцию на отзывы. *С уважением, Галина.*
