--- a/content/reviews/6.md
+++ b/content/reviews/6.md
@@ -4,7 +4,5 @@ name: 'Галина Ивановна'
 date: '2018-02-24'
 published: true
 ---
-**Здравствуйте, уважаемые модераторы сайта!** 
-Два дня назад я написала отзыв о работе медсестры в кабинете врача Раджабова. Но отзыва своего на сайте я не вижу.Это потому-что ещё не успели промодерировать, или отрицательные отзывы просто не пропускаете? 
-И на сайте почему-то очень много рекламы... 
-*С уважением, Галина.*
+**Здравствуйте, уважаемые модераторы сайта!**
+Два дня назад я написала отзыв о работе медсестры в кабинете врача Раджабова. Но отзыва своего на сайте я не вижу.Это потому-что ещё не успели промодерировать, или отрицательные отзывы просто не пропускаете? И на сайте почему-то очень много рекламы... *С уважением, Галина.*
